fix button visibility

--- a/src/app/components/child/child.component.scss
+++ b/src/app/components/child/child.component.scss
@@ -2,7 +2,18 @@ div{
     padding: 15px;
     margin: 20px;
     border: 1px slategrey solid;
+
 }
+div:hover{
+    padding: 15px;
+    margin: 20px;
+    border: 1px slategrey solid;
+    button{
+        visibility:visible;
+        float: right;
+    }
+}
+
 button{
     visibility: hidden;
     float: right;
